--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,3 +47,5 @@ services:
       KAFKA_REST_HOST_NAME: rest-proxy
       KAFKA_REST_BOOTSTRAP_SERVERS: 'broker:29092'
       KAFKA_REST_LISTENERS: "http://0.0.0.0:8082"
+      # https://docs.confluent.io/current/kafka-rest/config.html
+      KAFKA_REST_ZOOKEEPER_CONNECT: 'zookeeper:2181'
