--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,10 @@
 			<artifactId>spring-cloud-commons</artifactId>
 			<version>2.2.1.RELEASE</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
