--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,3 +73,14 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: localhost:22181,localhost:32181,localhost:42181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:39092
       KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE: 'false'
+
+  mongo:
+    image: mongo:4.2.2-bionic
+    network_mode: host
+    volumes:
+      - mongo_kafkotest_data_dir:/data/db
+      - ./docker/mongo/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+    command: ["--replSet", "rs0"]
+
+volumes:
+  mongo_kafkotest_data_dir:
