--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@
 # ~/javaWorkspace/examples/cp-all-in-one (5.3.1-post)
 version: '3.7'
 services:
-
   zookeeper-1:
     image: confluentinc/cp-zookeeper:5.3.1
     restart: unless-stopped
@@ -12,7 +11,9 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
-      ZOOKEEPER_SERVERS: zookeeper-1:22888:23888;zookeeper-2:32888:33888;zookeeper-3:42888:43888
+      ZOOKEEPER_SERVERS: localhost:22888:23888;localhost:32888:33888;localhost:42888:43888
+    network_mode: host
+
   zookeeper-2:
     image: confluentinc/cp-zookeeper:5.3.1
     restart: unless-stopped
@@ -22,7 +23,9 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
-      ZOOKEEPER_SERVERS: zookeeper-1:22888:23888;zookeeper-2:32888:33888;zookeeper-3:42888:43888
+      ZOOKEEPER_SERVERS: localhost:22888:23888;localhost:32888:33888;localhost:42888:43888
+    network_mode: host
+
   zookeeper-3:
     image: confluentinc/cp-zookeeper:5.3.1
     restart: unless-stopped
@@ -32,27 +35,21 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
-      ZOOKEEPER_SERVERS: zookeeper-1:22888:23888;zookeeper-2:32888:33888;zookeeper-3:42888:43888
+      ZOOKEEPER_SERVERS: localhost:22888:23888;localhost:32888:33888;localhost:42888:43888
+    network_mode: host
 
   kafka-1:
     image: confluentinc/cp-enterprise-kafka:5.3.1
+    network_mode: host
     restart: unless-stopped
-    hostname: kafka-1
-#    container_name: kafka-1
     depends_on:
       - zookeeper-1
       - zookeeper-2
       - zookeeper-3
-    ports:
-      - "9092:9092"
     environment:
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_LISTENERS: PLAINTEXT://:29092,PLAINTEXT_HOST://:9092
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-1:29092,PLAINTEXT_HOST://localhost:9092
-      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:22181,zookeeper-2:32181,zookeeper-3:42181
+      KAFKA_ZOOKEEPER_CONNECT: localhost:22181,localhost:32181,localhost:42181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:19092
       KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE: 'false'
     logging:
       driver: "json-file"
@@ -61,18 +58,16 @@ services:
         max-file: "1"
   kafka-2:
     image: confluentinc/cp-enterprise-kafka:5.3.1
+    network_mode: host
     restart: unless-stopped
-    hostname: kafka-2
-#    container_name: kafka-2
     depends_on:
       - zookeeper-1
       - zookeeper-2
       - zookeeper-3
-    ports:
-      - "9093:9092"
     environment:
       KAFKA_BROKER_ID: 2
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:22181,zookeeper-2:32181,zookeeper-3:42181
+      KAFKA_ZOOKEEPER_CONNECT: localhost:22181,localhost:32181,localhost:42181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:29092
       KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE: 'false'
     logging:
       driver: "json-file"
@@ -81,23 +76,16 @@ services:
         max-file: "1"
   kafka-3:
     image: confluentinc/cp-enterprise-kafka:5.3.1
+    network_mode: host
     restart: unless-stopped
-    hostname: kafka-3
-#    container_name: kafka-3
     depends_on:
       - zookeeper-1
       - zookeeper-2
       - zookeeper-3
-    ports:
-      - "9094:9092"
     environment:
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_LISTENERS: PLAINTEXT://:29092,PLAINTEXT_HOST://:9092
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-3:29092,PLAINTEXT_HOST://localhost:9094
-      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
       KAFKA_BROKER_ID: 3
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:22181,zookeeper-2:32181,zookeeper-3:42181
+      KAFKA_ZOOKEEPER_CONNECT: localhost:22181,localhost:32181,localhost:42181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:39092
       KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE: 'false'
     logging:
       driver: "json-file"
@@ -108,13 +96,16 @@ services:
   # https://docs.confluent.io/current/ksql/docs/installation/install-ksql-with-docker.html
   ksql-server:
     image: confluentinc/cp-ksql-server:5.3.1
+    network_mode: host
     restart: unless-stopped
+    depends_on:
+      - kafka-1
     ports:
       - "8088:8088"
     environment:
       KSQL_CONFIG_DIR: "/etc/ksql"
       KSQL_LOG4J_OPTS: "-Dlog4j.configuration=file:/etc/ksql/log4j-rolling.properties"
-      KSQL_BOOTSTRAP_SERVERS: "kafka-1:29092,kafka-2:29092,kafka-3:29092"
+      KSQL_BOOTSTRAP_SERVERS: "localhost:19092"
       KSQL_HOST_NAME: ksql-server
       KSQL_LISTENERS: "http://0.0.0.0:8088"
       KSQL_CACHE_MAX_BYTES_BUFFERING: 0
