--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
       ZOOKEEPER_SERVERS: localhost:22888:23888;localhost:32888:33888;localhost:42888:43888
+      # https://zookeeper.apache.org/doc/r3.5.1-alpha/zookeeperAdmin.html
+      _JAVA_OPTIONS: -Dzookeeper.admin.serverPort=22800
     network_mode: host
 
   zookeeper-2:
@@ -24,6 +26,7 @@ services:
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
       ZOOKEEPER_SERVERS: localhost:22888:23888;localhost:32888:33888;localhost:42888:43888
+      _JAVA_OPTIONS: -Dzookeeper.admin.serverPort=32800
     network_mode: host
 
   zookeeper-3:
@@ -36,6 +39,7 @@ services:
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
       ZOOKEEPER_SERVERS: localhost:22888:23888;localhost:32888:33888;localhost:42888:43888
+      _JAVA_OPTIONS: -Dzookeeper.admin.serverPort=42800
     network_mode: host
 
   kafka-1:
@@ -100,8 +104,6 @@ services:
     restart: unless-stopped
     depends_on:
       - kafka-1
-    ports:
-      - "8088:8088"
     environment:
       KSQL_CONFIG_DIR: "/etc/ksql"
       KSQL_LOG4J_OPTS: "-Dlog4j.configuration=file:/etc/ksql/log4j-rolling.properties"
