fix file flag, add confluent configs to docker volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     volumes:
       - ./update_run.sh:/tmp/update_run.sh:z
       - kafka_data:/var/lib/kafka/data:z
+      - confluent_config_data:/etc/confluent/docker:z
     command: "bash -c 'if [ ! -f /tmp/update_run.sh ]; then echo \"ERROR: Did you forget the update_run.sh file that came with this docker-compose.yml file?\" && exit 1 ; else /tmp/update_run.sh && /etc/confluent/docker/run ; fi'"
 
   # https://docs.confluent.io/current/ksql/docs/installation/install-ksql-with-docker.html
@@ -46,3 +47,4 @@ services:
 
 volumes:
   kafka_data:
+  confluent_config_data:
