restart unless-stopped for kafka

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
   kafka:
     image: confluentinc/cp-kafka:7.0.0
     container_name: kafka
+    restart: unless-stopped
     ports:
       - "9092:9092"
     environment:
