--- a/docker/ksqldb/migrations/ksql-migrations.properties
+++ b/docker/ksqldb/migrations/ksql-migrations.properties
@@ -1,4 +1,4 @@
-ksql.server.url=http://host.docker.internal:8088
+ksql.server.url=http://ksqldb:8088
 
 # Migrations metadata configs:
 # ksql.migrations.stream.name=MIGRATION_EVENTS
