--- a/ksql-service/pom.xml
+++ b/ksql-service/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.1</version>
+		<version>2.6.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -32,10 +32,42 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+        <!-- https://docs.ksqldb.io/en/latest/developer-guide/ksqldb-clients/java-client/ -->
         <dependency>
             <groupId>io.confluent.ksql</groupId>
             <artifactId>ksqldb-api-client</artifactId>
-            <version>7.0.1</version>
+            <version>0.24.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-reload4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.confluent</groupId>
+                    <artifactId>confluent-log4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!-- ksqldb-udf and kafka-clients used only to fix class|method not found errors -->
+        <dependency>
+            <groupId>io.confluent.ksql</groupId>
+            <artifactId>ksqldb-udf</artifactId>
+            <version>0.24.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-reload4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.confluent</groupId>
+                    <artifactId>confluent-log4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>3.1.0</version>
         </dependency>
 
         <dependency>
@@ -69,9 +101,9 @@
 			<url>https://repo.spring.io/milestone</url>
 		</repository>
         <repository>
-            <id>confluent-packages</id>
-            <name>Confluent</name>
-            <url>https://packages.confluent.io/maven/</url>
+            <id>ksqlDB</id>
+            <name>ksqlDB</name>
+            <url>https://ksqldb-maven.s3.amazonaws.com/maven/</url>
         </repository>
 	</repositories>
 
