--- a/ksql-service/pom.xml
+++ b/ksql-service/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.4</version>
+		<version>2.7.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>io.confluent.ksql</groupId>
             <artifactId>ksqldb-api-client</artifactId>
-            <version>0.26.0</version>
+            <version>0.28.2</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -46,27 +46,26 @@
                     <groupId>io.confluent</groupId>
                     <artifactId>confluent-log4j</artifactId>
                 </exclusion>
-            </exclusions>
-        </dependency>
-        <!-- ksqldb-udf and kafka-clients used only to fix class|method not found errors -->
-        <dependency>
-            <groupId>io.confluent.ksql</groupId>
-            <artifactId>ksqldb-udf</artifactId>
-            <version>0.26.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-reload4j</artifactId>
-                </exclusion>
                 <exclusion>
                     <groupId>io.confluent</groupId>
-                    <artifactId>confluent-log4j</artifactId>
+                    <artifactId>logredactor</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.vertx</groupId>
+                    <artifactId>vertx-codegen</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- It's need for ksqldb-api-client -->
         <dependency>
             <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
+            <artifactId>kafka-streams</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.rocksdb</groupId>
+                    <artifactId>rocksdbjni</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
